agent/parser/y.output

state 0
	$accept: .commands $end 
	commands: .    (1)

	.  reduce 1 (src line 44)

	commands  goto 1

state 1
	$accept:  commands.$end 
	commands:  commands.command 

	$end  accept
	T_IDENTIFIER  shift 5
	T_VARIABLE  shift 6
	.  error

	command  goto 2
	set_property  goto 3
	assign_to_var  goto 4

state 2
	commands:  commands command.    (2)

	.  reduce 2 (src line 45)


state 3
	command:  set_property.    (3)

	.  reduce 3 (src line 47)


state 4
	command:  assign_to_var.    (4)

	.  reduce 4 (src line 48)


state 5
	set_property:  T_IDENTIFIER.T_COLON expr 

	T_COLON  shift 7
	.  error


state 6
	assign_to_var:  T_VARIABLE.T_COLON expr 

	T_COLON  shift 8
	.  error


state 7
	set_property:  T_IDENTIFIER T_COLON.expr 

	T_STRING  shift 12
	T_NUMBER  shift 11
	T_IDENTIFIER  shift 23
	T_VARIABLE  shift 13
	T_TRUE  shift 14
	T_FALSE  shift 15
	T_PLUS  shift 20
	T_MINUS  shift 19
	T_OPEN_PARENS  shift 10
	T_NEGATE  shift 21
	.  error

	expr  goto 9
	function_call  goto 17
	callable_expr  goto 22
	property  goto 18
	operation  goto 16

state 8
	assign_to_var:  T_VARIABLE T_COLON.expr 

	T_STRING  shift 12
	T_NUMBER  shift 11
	T_IDENTIFIER  shift 23
	T_VARIABLE  shift 13
	T_TRUE  shift 14
	T_FALSE  shift 15
	T_PLUS  shift 20
	T_MINUS  shift 19
	T_OPEN_PARENS  shift 10
	T_NEGATE  shift 21
	.  error

	expr  goto 24
	function_call  goto 17
	callable_expr  goto 22
	property  goto 18
	operation  goto 16

state 9
	set_property:  T_IDENTIFIER T_COLON expr.    (5)
	operation:  expr.T_PLUS expr 
	operation:  expr.T_MINUS expr 
	operation:  expr.T_MULTIPLY expr 
	operation:  expr.T_DIVIDE expr 
	operation:  expr.T_EQUAL expr 
	operation:  expr.T_NOT_EQUAL expr 
	operation:  expr.T_AND expr 
	operation:  expr.T_OR expr 
	property:  expr.T_DOT T_IDENTIFIER 

	T_PLUS  shift 25
	T_MINUS  shift 26
	T_MULTIPLY  shift 27
	T_DIVIDE  shift 28
	T_DOT  shift 33
	T_OR  shift 32
	T_AND  shift 31
	T_EQUAL  shift 29
	T_NOT_EQUAL  shift 30
	.  reduce 5 (src line 51)


state 10
	expr:  T_OPEN_PARENS.expr T_CLOSE_PARENS 

	T_STRING  shift 12
	T_NUMBER  shift 11
	T_IDENTIFIER  shift 23
	T_VARIABLE  shift 13
	T_TRUE  shift 14
	T_FALSE  shift 15
	T_PLUS  shift 20
	T_MINUS  shift 19
	T_OPEN_PARENS  shift 10
	T_NEGATE  shift 21
	.  error

	expr  goto 34
	function_call  goto 17
	callable_expr  goto 22
	property  goto 18
	operation  goto 16

state 11
	expr:  T_NUMBER.    (8)

	.  reduce 8 (src line 65)


state 12
	expr:  T_STRING.    (9)

	.  reduce 9 (src line 67)


state 13
	expr:  T_VARIABLE.    (10)

	.  reduce 10 (src line 69)


state 14
	expr:  T_TRUE.    (11)

	.  reduce 11 (src line 71)


state 15
	expr:  T_FALSE.    (12)

	.  reduce 12 (src line 73)


state 16
	expr:  operation.    (13)

	.  reduce 13 (src line 75)


state 17
	expr:  function_call.    (14)

	.  reduce 14 (src line 77)


state 18
	expr:  property.    (15)
	callable_expr:  property.    (29)

	T_OPEN_PARENS  reduce 29 (src line 113)
	.  reduce 15 (src line 79)


state 19
	operation:  T_MINUS.expr 

	T_STRING  shift 12
	T_NUMBER  shift 11
	T_IDENTIFIER  shift 23
	T_VARIABLE  shift 13
	T_TRUE  shift 14
	T_FALSE  shift 15
	T_PLUS  shift 20
	T_MINUS  shift 19
	T_OPEN_PARENS  shift 10
	T_NEGATE  shift 21
	.  error

	expr  goto 35
	function_call  goto 17
	callable_expr  goto 22
	property  goto 18
	operation  goto 16

state 20
	operation:  T_PLUS.expr 

	T_STRING  shift 12
	T_NUMBER  shift 11
	T_IDENTIFIER  shift 23
	T_VARIABLE  shift 13
	T_TRUE  shift 14
	T_FALSE  shift 15
	T_PLUS  shift 20
	T_MINUS  shift 19
	T_OPEN_PARENS  shift 10
	T_NEGATE  shift 21
	.  error

	expr  goto 36
	function_call  goto 17
	callable_expr  goto 22
	property  goto 18
	operation  goto 16

state 21
	operation:  T_NEGATE.expr 

	T_STRING  shift 12
	T_NUMBER  shift 11
	T_IDENTIFIER  shift 23
	T_VARIABLE  shift 13
	T_TRUE  shift 14
	T_FALSE  shift 15
	T_PLUS  shift 20
	T_MINUS  shift 19
	T_OPEN_PARENS  shift 10
	T_NEGATE  shift 21
	.  error

	expr  goto 37
	function_call  goto 17
	callable_expr  goto 22
	property  goto 18
	operation  goto 16

state 22
	function_call:  callable_expr.T_OPEN_PARENS expr_list T_CLOSE_PARENS 

	T_OPEN_PARENS  shift 38
	.  error


state 23
	callable_expr:  T_IDENTIFIER.    (28)

	.  reduce 28 (src line 111)


state 24
	assign_to_var:  T_VARIABLE T_COLON expr.    (6)
	operation:  expr.T_PLUS expr 
	operation:  expr.T_MINUS expr 
	operation:  expr.T_MULTIPLY expr 
	operation:  expr.T_DIVIDE expr 
	operation:  expr.T_EQUAL expr 
	operation:  expr.T_NOT_EQUAL expr 
	operation:  expr.T_AND expr 
	operation:  expr.T_OR expr 
	property:  expr.T_DOT T_IDENTIFIER 

	T_PLUS  shift 25
	T_MINUS  shift 26
	T_MULTIPLY  shift 27
	T_DIVIDE  shift 28
	T_DOT  shift 33
	T_OR  shift 32
	T_AND  shift 31
	T_EQUAL  shift 29
	T_NOT_EQUAL  shift 30
	.  reduce 6 (src line 57)


state 25
	operation:  expr T_PLUS.expr 

	T_STRING  shift 12
	T_NUMBER  shift 11
	T_IDENTIFIER  shift 23
	T_VARIABLE  shift 13
	T_TRUE  shift 14
	T_FALSE  shift 15
	T_PLUS  shift 20
	T_MINUS  shift 19
	T_OPEN_PARENS  shift 10
	T_NEGATE  shift 21
	.  error

	expr  goto 39
	function_call  goto 17
	callable_expr  goto 22
	property  goto 18
	operation  goto 16

state 26
	operation:  expr T_MINUS.expr 

	T_STRING  shift 12
	T_NUMBER  shift 11
	T_IDENTIFIER  shift 23
	T_VARIABLE  shift 13
	T_TRUE  shift 14
	T_FALSE  shift 15
	T_PLUS  shift 20
	T_MINUS  shift 19
	T_OPEN_PARENS  shift 10
	T_NEGATE  shift 21
	.  error

	expr  goto 40
	function_call  goto 17
	callable_expr  goto 22
	property  goto 18
	operation  goto 16

state 27
	operation:  expr T_MULTIPLY.expr 

	T_STRING  shift 12
	T_NUMBER  shift 11
	T_IDENTIFIER  shift 23
	T_VARIABLE  shift 13
	T_TRUE  shift 14
	T_FALSE  shift 15
	T_PLUS  shift 20
	T_MINUS  shift 19
	T_OPEN_PARENS  shift 10
	T_NEGATE  shift 21
	.  error

	expr  goto 41
	function_call  goto 17
	callable_expr  goto 22
	property  goto 18
	operation  goto 16

state 28
	operation:  expr T_DIVIDE.expr 

	T_STRING  shift 12
	T_NUMBER  shift 11
	T_IDENTIFIER  shift 23
	T_VARIABLE  shift 13
	T_TRUE  shift 14
	T_FALSE  shift 15
	T_PLUS  shift 20
	T_MINUS  shift 19
	T_OPEN_PARENS  shift 10
	T_NEGATE  shift 21
	.  error

	expr  goto 42
	function_call  goto 17
	callable_expr  goto 22
	property  goto 18
	operation  goto 16

state 29
	operation:  expr T_EQUAL.expr 

	T_STRING  shift 12
	T_NUMBER  shift 11
	T_IDENTIFIER  shift 23
	T_VARIABLE  shift 13
	T_TRUE  shift 14
	T_FALSE  shift 15
	T_PLUS  shift 20
	T_MINUS  shift 19
	T_OPEN_PARENS  shift 10
	T_NEGATE  shift 21
	.  error

	expr  goto 43
	function_call  goto 17
	callable_expr  goto 22
	property  goto 18
	operation  goto 16

state 30
	operation:  expr T_NOT_EQUAL.expr 

	T_STRING  shift 12
	T_NUMBER  shift 11
	T_IDENTIFIER  shift 23
	T_VARIABLE  shift 13
	T_TRUE  shift 14
	T_FALSE  shift 15
	T_PLUS  shift 20
	T_MINUS  shift 19
	T_OPEN_PARENS  shift 10
	T_NEGATE  shift 21
	.  error

	expr  goto 44
	function_call  goto 17
	callable_expr  goto 22
	property  goto 18
	operation  goto 16

state 31
	operation:  expr T_AND.expr 

	T_STRING  shift 12
	T_NUMBER  shift 11
	T_IDENTIFIER  shift 23
	T_VARIABLE  shift 13
	T_TRUE  shift 14
	T_FALSE  shift 15
	T_PLUS  shift 20
	T_MINUS  shift 19
	T_OPEN_PARENS  shift 10
	T_NEGATE  shift 21
	.  error

	expr  goto 45
	function_call  goto 17
	callable_expr  goto 22
	property  goto 18
	operation  goto 16

state 32
	operation:  expr T_OR.expr 

	T_STRING  shift 12
	T_NUMBER  shift 11
	T_IDENTIFIER  shift 23
	T_VARIABLE  shift 13
	T_TRUE  shift 14
	T_FALSE  shift 15
	T_PLUS  shift 20
	T_MINUS  shift 19
	T_OPEN_PARENS  shift 10
	T_NEGATE  shift 21
	.  error

	expr  goto 46
	function_call  goto 17
	callable_expr  goto 22
	property  goto 18
	operation  goto 16

state 33
	property:  expr T_DOT.T_IDENTIFIER 

	T_IDENTIFIER  shift 47
	.  error


state 34
	expr:  T_OPEN_PARENS expr.T_CLOSE_PARENS 
	operation:  expr.T_PLUS expr 
	operation:  expr.T_MINUS expr 
	operation:  expr.T_MULTIPLY expr 
	operation:  expr.T_DIVIDE expr 
	operation:  expr.T_EQUAL expr 
	operation:  expr.T_NOT_EQUAL expr 
	operation:  expr.T_AND expr 
	operation:  expr.T_OR expr 
	property:  expr.T_DOT T_IDENTIFIER 

	T_PLUS  shift 25
	T_MINUS  shift 26
	T_MULTIPLY  shift 27
	T_DIVIDE  shift 28
	T_DOT  shift 33
	T_CLOSE_PARENS  shift 48
	T_OR  shift 32
	T_AND  shift 31
	T_EQUAL  shift 29
	T_NOT_EQUAL  shift 30
	.  error


state 35
	operation:  expr.T_PLUS expr 
	operation:  expr.T_MINUS expr 
	operation:  expr.T_MULTIPLY expr 
	operation:  expr.T_DIVIDE expr 
	operation:  expr.T_EQUAL expr 
	operation:  expr.T_NOT_EQUAL expr 
	operation:  expr.T_AND expr 
	operation:  expr.T_OR expr 
	operation:  T_MINUS expr.    (24)
	property:  expr.T_DOT T_IDENTIFIER 

	T_DOT  shift 33
	.  reduce 24 (src line 99)


state 36
	operation:  expr.T_PLUS expr 
	operation:  expr.T_MINUS expr 
	operation:  expr.T_MULTIPLY expr 
	operation:  expr.T_DIVIDE expr 
	operation:  expr.T_EQUAL expr 
	operation:  expr.T_NOT_EQUAL expr 
	operation:  expr.T_AND expr 
	operation:  expr.T_OR expr 
	operation:  T_PLUS expr.    (25)
	property:  expr.T_DOT T_IDENTIFIER 

	T_DOT  shift 33
	.  reduce 25 (src line 101)


state 37
	operation:  expr.T_PLUS expr 
	operation:  expr.T_MINUS expr 
	operation:  expr.T_MULTIPLY expr 
	operation:  expr.T_DIVIDE expr 
	operation:  expr.T_EQUAL expr 
	operation:  expr.T_NOT_EQUAL expr 
	operation:  expr.T_AND expr 
	operation:  expr.T_OR expr 
	operation:  T_NEGATE expr.    (26)
	property:  expr.T_DOT T_IDENTIFIER 

	T_DOT  shift 33
	.  reduce 26 (src line 103)


state 38
	function_call:  callable_expr T_OPEN_PARENS.expr_list T_CLOSE_PARENS 
	expr_list: .    (33)

	T_STRING  shift 12
	T_NUMBER  shift 11
	T_IDENTIFIER  shift 51
	T_VARIABLE  shift 13
	T_TRUE  shift 14
	T_FALSE  shift 15
	T_PLUS  shift 20
	T_MINUS  shift 19
	T_OPEN_PARENS  shift 10
	T_NEGATE  shift 21
	.  reduce 33 (src line 125)

	expr  goto 52
	function_call  goto 17
	callable_expr  goto 22
	property  goto 18
	operation  goto 16
	expr_list  goto 49
	expr_item  goto 50

state 39
	operation:  expr.T_PLUS expr 
	operation:  expr T_PLUS expr.    (16)
	operation:  expr.T_MINUS expr 
	operation:  expr.T_MULTIPLY expr 
	operation:  expr.T_DIVIDE expr 
	operation:  expr.T_EQUAL expr 
	operation:  expr.T_NOT_EQUAL expr 
	operation:  expr.T_AND expr 
	operation:  expr.T_OR expr 
	property:  expr.T_DOT T_IDENTIFIER 

	T_MULTIPLY  shift 27
	T_DIVIDE  shift 28
	T_DOT  shift 33
	.  reduce 16 (src line 83)


state 40
	operation:  expr.T_PLUS expr 
	operation:  expr.T_MINUS expr 
	operation:  expr T_MINUS expr.    (17)
	operation:  expr.T_MULTIPLY expr 
	operation:  expr.T_DIVIDE expr 
	operation:  expr.T_EQUAL expr 
	operation:  expr.T_NOT_EQUAL expr 
	operation:  expr.T_AND expr 
	operation:  expr.T_OR expr 
	property:  expr.T_DOT T_IDENTIFIER 

	T_MULTIPLY  shift 27
	T_DIVIDE  shift 28
	T_DOT  shift 33
	.  reduce 17 (src line 85)


state 41
	operation:  expr.T_PLUS expr 
	operation:  expr.T_MINUS expr 
	operation:  expr.T_MULTIPLY expr 
	operation:  expr T_MULTIPLY expr.    (18)
	operation:  expr.T_DIVIDE expr 
	operation:  expr.T_EQUAL expr 
	operation:  expr.T_NOT_EQUAL expr 
	operation:  expr.T_AND expr 
	operation:  expr.T_OR expr 
	property:  expr.T_DOT T_IDENTIFIER 

	T_DOT  shift 33
	.  reduce 18 (src line 87)


state 42
	operation:  expr.T_PLUS expr 
	operation:  expr.T_MINUS expr 
	operation:  expr.T_MULTIPLY expr 
	operation:  expr.T_DIVIDE expr 
	operation:  expr T_DIVIDE expr.    (19)
	operation:  expr.T_EQUAL expr 
	operation:  expr.T_NOT_EQUAL expr 
	operation:  expr.T_AND expr 
	operation:  expr.T_OR expr 
	property:  expr.T_DOT T_IDENTIFIER 

	T_DOT  shift 33
	.  reduce 19 (src line 89)


state 43
	operation:  expr.T_PLUS expr 
	operation:  expr.T_MINUS expr 
	operation:  expr.T_MULTIPLY expr 
	operation:  expr.T_DIVIDE expr 
	operation:  expr.T_EQUAL expr 
	operation:  expr T_EQUAL expr.    (20)
	operation:  expr.T_NOT_EQUAL expr 
	operation:  expr.T_AND expr 
	operation:  expr.T_OR expr 
	property:  expr.T_DOT T_IDENTIFIER 

	T_PLUS  shift 25
	T_MINUS  shift 26
	T_MULTIPLY  shift 27
	T_DIVIDE  shift 28
	T_DOT  shift 33
	T_EQUAL  error
	T_NOT_EQUAL  error
	.  reduce 20 (src line 91)


state 44
	operation:  expr.T_PLUS expr 
	operation:  expr.T_MINUS expr 
	operation:  expr.T_MULTIPLY expr 
	operation:  expr.T_DIVIDE expr 
	operation:  expr.T_EQUAL expr 
	operation:  expr.T_NOT_EQUAL expr 
	operation:  expr T_NOT_EQUAL expr.    (21)
	operation:  expr.T_AND expr 
	operation:  expr.T_OR expr 
	property:  expr.T_DOT T_IDENTIFIER 

	T_PLUS  shift 25
	T_MINUS  shift 26
	T_MULTIPLY  shift 27
	T_DIVIDE  shift 28
	T_DOT  shift 33
	T_EQUAL  error
	T_NOT_EQUAL  error
	.  reduce 21 (src line 93)


state 45
	operation:  expr.T_PLUS expr 
	operation:  expr.T_MINUS expr 
	operation:  expr.T_MULTIPLY expr 
	operation:  expr.T_DIVIDE expr 
	operation:  expr.T_EQUAL expr 
	operation:  expr.T_NOT_EQUAL expr 
	operation:  expr.T_AND expr 
	operation:  expr T_AND expr.    (22)
	operation:  expr.T_OR expr 
	property:  expr.T_DOT T_IDENTIFIER 

	T_PLUS  shift 25
	T_MINUS  shift 26
	T_MULTIPLY  shift 27
	T_DIVIDE  shift 28
	T_DOT  shift 33
	T_EQUAL  shift 29
	T_NOT_EQUAL  shift 30
	.  reduce 22 (src line 95)


state 46
	operation:  expr.T_PLUS expr 
	operation:  expr.T_MINUS expr 
	operation:  expr.T_MULTIPLY expr 
	operation:  expr.T_DIVIDE expr 
	operation:  expr.T_EQUAL expr 
	operation:  expr.T_NOT_EQUAL expr 
	operation:  expr.T_AND expr 
	operation:  expr.T_OR expr 
	operation:  expr T_OR expr.    (23)
	property:  expr.T_DOT T_IDENTIFIER 

	T_PLUS  shift 25
	T_MINUS  shift 26
	T_MULTIPLY  shift 27
	T_DIVIDE  shift 28
	T_DOT  shift 33
	T_AND  shift 31
	T_EQUAL  shift 29
	T_NOT_EQUAL  shift 30
	.  reduce 23 (src line 97)


state 47
	property:  expr T_DOT T_IDENTIFIER.    (30)

	.  reduce 30 (src line 117)


state 48
	expr:  T_OPEN_PARENS expr T_CLOSE_PARENS.    (7)

	.  reduce 7 (src line 63)


state 49
	function_call:  callable_expr T_OPEN_PARENS expr_list.T_CLOSE_PARENS 
	expr_list:  expr_list.T_COMMA expr_item 

	T_COMMA  shift 54
	T_CLOSE_PARENS  shift 53
	.  error


state 50
	expr_list:  expr_item.    (32)

	.  reduce 32 (src line 123)


state 51
	callable_expr:  T_IDENTIFIER.    (28)
	expr_item:  T_IDENTIFIER.T_COLON expr 

	T_COLON  shift 55
	.  reduce 28 (src line 111)


state 52
	operation:  expr.T_PLUS expr 
	operation:  expr.T_MINUS expr 
	operation:  expr.T_MULTIPLY expr 
	operation:  expr.T_DIVIDE expr 
	operation:  expr.T_EQUAL expr 
	operation:  expr.T_NOT_EQUAL expr 
	operation:  expr.T_AND expr 
	operation:  expr.T_OR expr 
	property:  expr.T_DOT T_IDENTIFIER 
	expr_item:  expr.    (35)

	T_PLUS  shift 25
	T_MINUS  shift 26
	T_MULTIPLY  shift 27
	T_DIVIDE  shift 28
	T_DOT  shift 33
	T_OR  shift 32
	T_AND  shift 31
	T_EQUAL  shift 29
	T_NOT_EQUAL  shift 30
	.  reduce 35 (src line 131)


state 53
	function_call:  callable_expr T_OPEN_PARENS expr_list T_CLOSE_PARENS.    (27)

	.  reduce 27 (src line 107)


state 54
	expr_list:  expr_list T_COMMA.expr_item 

	T_STRING  shift 12
	T_NUMBER  shift 11
	T_IDENTIFIER  shift 51
	T_VARIABLE  shift 13
	T_TRUE  shift 14
	T_FALSE  shift 15
	T_PLUS  shift 20
	T_MINUS  shift 19
	T_OPEN_PARENS  shift 10
	T_NEGATE  shift 21
	.  error

	expr  goto 52
	function_call  goto 17
	callable_expr  goto 22
	property  goto 18
	operation  goto 16
	expr_item  goto 56

state 55
	expr_item:  T_IDENTIFIER T_COLON.expr 

	T_STRING  shift 12
	T_NUMBER  shift 11
	T_IDENTIFIER  shift 23
	T_VARIABLE  shift 13
	T_TRUE  shift 14
	T_FALSE  shift 15
	T_PLUS  shift 20
	T_MINUS  shift 19
	T_OPEN_PARENS  shift 10
	T_NEGATE  shift 21
	.  error

	expr  goto 57
	function_call  goto 17
	callable_expr  goto 22
	property  goto 18
	operation  goto 16

state 56
	expr_list:  expr_list T_COMMA expr_item.    (31)

	.  reduce 31 (src line 121)


state 57
	operation:  expr.T_PLUS expr 
	operation:  expr.T_MINUS expr 
	operation:  expr.T_MULTIPLY expr 
	operation:  expr.T_DIVIDE expr 
	operation:  expr.T_EQUAL expr 
	operation:  expr.T_NOT_EQUAL expr 
	operation:  expr.T_AND expr 
	operation:  expr.T_OR expr 
	property:  expr.T_DOT T_IDENTIFIER 
	expr_item:  T_IDENTIFIER T_COLON expr.    (34)

	T_PLUS  shift 25
	T_MINUS  shift 26
	T_MULTIPLY  shift 27
	T_DIVIDE  shift 28
	T_DOT  shift 33
	T_OR  shift 32
	T_AND  shift 31
	T_EQUAL  shift 29
	T_NOT_EQUAL  shift 30
	.  reduce 34 (src line 129)


28 terminals, 12 nonterminals
36 grammar rules, 58/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
61 working sets used
memory: parser 92/30000
39 extra closures
261 shift entries, 6 exceptions
27 goto entries
65 entries saved by goto default
Optimizer space used: output 123/30000
123 table entries, 24 zero
maximum spread: 25, maximum offset: 55
